--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/oqudue369/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/oqudue369/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://tt6.jugd53.ml/yxbzydj/y513i" target="_blank">动态网</a> | <a href="https://tt6.jugd53.ml/yxbzydj/n11y" target="_blank">看中国</a> | <a href="https://git.io/fjHpI" target="_blank">新纪元</a> | <a href="https://tt6.jugd53.ml/yxbzydj/m12m" target="_blank">无界</a> | <a href="https://tt6.jugd53.ml/yxbzydj/s8f" target="_blank">退党</a> | <a href="https://git.io/fjHpT" target="_blank">网门</a> | <a href="https://tt6.jugd53.ml/yxbzydj/m4w" target="_blank">神韵</a> | <a href="https://tt6.jugd53.ml/yxbzydj/h12n" target="_blank">圣缘</a> | <a href="https://tt6.jugd53.ml/yxbzydj/p3b" target="_blank">明慧网</a> | <a href="https://tt6.jugd53.ml/yxbzydj/x10q" target="_blank">正见网</a> | <a href="https://tt6.jugd53.ml/yxbzydj/h9i" target="_blank">希望之声</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> |<a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a ></p><p><a href="https://tt6.jugd53.ml/yxbzydj/y7g" target="_blank">大纪元</a> | <a href="https://tt6.jugd53.ml/yxbzydj/j5t" target="_blank">新唐人</a> | <a href="https://git.io/JervF" target="_blank">亚太台</a> | <a href="https://git.io/fjHpG" target="_blank">直播</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a > | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/3t/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a > |<a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/oqudue369/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/oqudue369/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://tt6.jugd53.ml/sijktlev/q513u" target="_blank">动态网</a> | <a href="https://tt6.jugd53.ml/sijktlev/b11r" target="_blank">看中国</a> | <a href="https://git.io/fjHpI" target="_blank">新纪元</a> | <a href="https://tt6.jugd53.ml/sijktlev/j12n" target="_blank">无界</a> | <a href="https://tt6.jugd53.ml/sijktlev/p8e" target="_blank">退党</a> | <a href="https://git.io/fjHpT" target="_blank">网门</a> | <a href="https://tt6.jugd53.ml/sijktlev/k4n" target="_blank">神韵</a> | <a href="https://tt6.jugd53.ml/sijktlev/v12l" target="_blank">圣缘</a> | <a href="https://tt6.jugd53.ml/sijktlev/o3v" target="_blank">明慧网</a> | <a href="https://tt6.jugd53.ml/sijktlev/k10s" target="_blank">正见网</a> | <a href="https://tt6.jugd53.ml/sijktlev/g9r" target="_blank">希望之声</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> |<a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a ></p><p><a href="https://tt6.jugd53.ml/sijktlev/q7p" target="_blank">大纪元</a> | <a href="https://tt6.jugd53.ml/sijktlev/f5v" target="_blank">新唐人</a> | <a href="https://git.io/JervF" target="_blank">亚太台</a> | <a href="https://git.io/fjHpG" target="_blank">直播</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a > | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/3t/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a > |<a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
 <tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241166.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/07/GettyImages-1198181431-600x400-320x200.jpg"><p align="center">【内幕】文件泄中共防疫 严控国民回国</p></a>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241166.md#1" title="【内幕】文件泄中共防疫 严控国民回国""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/07/GettyImages-1198181431-600x400-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243611.md#1" title="709大抓捕5周年 蓬佩奥：这波打压在持续""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/07/000_1UU14Q-1-320x200.jpg">&nbsp;</a>
@@ -13,12 +13,12 @@
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242632.md#1" title="驻港国安公署揭牌之际 港确诊个案激增""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/07/20200708_085704-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242209.md#1" title="【一线采访】降雨量破历史极值 江西灾情严重""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/07/IMG_4468-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://oqudue369.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>28分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244335.md#1">公务员职位疑遭顶包 女子柔道亚军求助无门</a><br>
-:clock8: <em>34分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244085.md#1">紧随澳洲回应国安法 新西兰将重审与香港关系</a><br>
-:clock8: <em>38分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241991.md#1">起诉江泽民 法轮功学员占庆荣被枉刑3年</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241166.md#1">【内幕】文件泄中共防疫 严控国民回国</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244260.md#1">五眼国家商讨香港问题 澳新重审与港关系</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243994.md#1">受贿1.07亿 海口市委前书记张琦受审</a><br>
+:clock8: <em>1分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244380.md#1">许志永获人权奖 法律界忧香港现709事件</a><br>
+:clock8: <em>22分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244206.md#1">709事件五周年 陆委会呼吁：释放维权人士</a><br>
+:clock8: <em>25分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243809.md#1">709律师呼吁大陆民众 克服恐惧 表达诉求</a><br>
+:clock8: <em>29分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12242979.md#1">【翻墙必看】美制裁中共有两个核弹级选项</a><br>
+:clock8: <em>58分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244335.md#1">公务员职位疑遭顶包 女子柔道亚军求助无门</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244085.md#1">紧随澳洲回应国安法 新西兰将重审与香港关系</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12239553.md#1">贵州大巴21死 传司机是退伍军人、拆迁户</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12240842.md#1">上海暴雨“中国第一高楼”多层楼漏水严重</a><br>
@@ -29,7 +29,7 @@
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12240429.md#1">【翻墙必看】中共在美国“猎狐”真相曝光</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/6/n12237466.md#1">美肯塔基海关查获46磅来自中国的迷奸药</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12239209.md#1">中共在克什米尔建水坝 引发大规模抗议</a><br>
-<a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12240462.md#1">四省洪水告急 江西已有近40万人受灾</a><br>
+<a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242067.md#1">澳留学生亮相反共后 遭死亡威胁</a><br>
 <br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241760.md#1">中芯国际股价暴涨暴跌 中共撒钱难掩窘境</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241863.md#1">【一线采访】贵州铜仁山体滑坡 村庄被埋</a><br>
@@ -42,7 +42,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 359,568,544 人
+!共 359,572,356 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
@@ -58,6 +58,7 @@
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243374.md#1">《被消失的香港》 港漫画家：用铅笔参与抗争</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12242979.md#1">【翻墙必看】美制裁中共有两个核弹级选项</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243659.md#1">习当局再清洗政法系统 分析：大动作在后面</a><br>
+<a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243809.md#1">709律师呼吁大陆民众 克服恐惧 表达诉求</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241991.md#1">起诉江泽民 法轮功学员占庆荣被枉刑3年</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242228.md#1">邓紫棋拿麦克风飙高音 罩中的玻璃杯瞬间炸裂</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241972.md#1">乐视退市 中国半个娱乐圈明星血本无归</a><br>
@@ -105,9 +106,8 @@
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/5/n12233532.md#1">【新闻第一现场】52国与中港有引渡条约 入境可送中</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/6/5/n12165121.md#1">【独家】北京卫戍区民兵花名册透露秘密</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/4/n12232772.md#1">白宫：总统正考虑两三件事 应对香港局势</a><br>
-<a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/4/n12231666.md#1">【十字路口】反制中共党媒渗透 台湾下驱逐令</a><br>
 <br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://gitlab.com/szzdlab/www/raw/master/v/2018-11-4/SY-Classical-Chinese-Dance-Technique-Collection-2018.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-11-12/zf-dsp-1128.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-6-1/st5-29.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"><br>古今奇观-藏字石</a><br><a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/3-JTT_CN_MH-360p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/tzrs.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/er3n_3VVJ.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/XmL0_0XDL2p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://gitlab.com/szzdlab/w2/raw/master/rs/NG8l.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/wt6Y_vPhM.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/vG2w_fwq.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/6c10-720.jpg" title="从610到720" alt="从610到720"><br>从610到720</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/O2jN_uD.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-14/1400forge-1210.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/1400l.jpg" title="剖析1400例" alt="剖析1400例"><br>剖析1400例</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/C1WZ_mj.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/JZ5e_5Vusp.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/jian-z513.jpg" title="见证513" alt="见证513"><br>见证513</a><br><a href="https://gitlab.com/szzdlab/w2/raw/master/lyp/0iY.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-2-21/guanguimin.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://gitlab.com/szzdlab/m1/raw/master/mjjy.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/c4rB_QQbr.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/O23c_E.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/oqudue369/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/oqudue369/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/oqudue369/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/oqudue369/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/oqudue369/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/oqudue369/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/oqudue369/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244335.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/07/77d22978ly1gfpfx25c19j20hs0npmys-320x200.jpg"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244335.md#1">公务员职位疑遭顶包 女子柔道亚军求助无门</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243709.md#1">上海连锁酒店被断水电 黑保安封门阻营业</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243597.md#1">王全璋律师展开维权行动 向法院递交控告状</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12242955.md#1">709大抓捕五周年 各界关注港版国安法</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242651.md#1">马振宇苏州监狱遭酷刑 美议员：帮助营救</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241411.md#1">宁夏永宁县8位法轮功学员面临非法庭审</a><br><br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243581.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2017/11/VCG111133635922-320x200.jpg"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243581.md#1">忧资金进入？大陆多地升级对楼市调控</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243607.md#1">美联航和美航再次暂停飞往香港的航班</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243066.md#1">陆养猪企业招聘2.5万大学生 安排在一线猪场</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242706.md#1">北京写字楼空置率创近十年新高</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242099.md#1">惩罚中共瞒疫 川普：禁TikTok是选择之一</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242331.md#1">印度新款“检测中国App”程序上架爆红</a><br><br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244085.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/07/GettyImages-1222894281-320x200.jpg"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244085.md#1">紧随澳洲回应国安法 新西兰将重审与香港关系</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244260.md#1">五眼国家商讨香港问题 澳新重审与港关系</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243994.md#1">受贿1.07亿 海口市委前书记张琦受审</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/2/n12227709.md#1">美国加速与中俄的太空军事竞赛</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242549.md#1">不满ICE新规 纽约高校表态帮助国际学生</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242263.md#1">蓬佩奥：世卫组织未能履行其基本职能</a><br><br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12242969.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/07/Untitled-7-e1594265581119-320x200.jpg"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12242969.md#1">广汉花炮厂爆炸6人受伤 7100余人被疏散</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241562.md#1">廖远：大禹治水与三峡工程防洪失败</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241977.md#1">【重播】白宫简报会：学校必须开放 如何进行</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242486.md#1">蓬佩奥：病毒大流行让全球看清中共真面目</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12240453.md#1">【疫情中的纽约人】有争议的抗病毒配方</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242174.md#1">四川广汉鞭炮厂爆炸 上空腾出蘑菇云</a><br><br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243412.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/07/12-320x200.jpg"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243412.md#1">大学教授曝丑闻 北京律协副会长疑有多个情妇</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243214.md#1">广州多家华为手机店诱骗顾客预存电话费后“倒闭”</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241847.md#1">河北一公司老板融资被重判 15亿资产遭抢占</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12240267.md#1">每日三退声明精选（2020/07/07）</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/6/n12236618.md#1">组图：街头为家 北京疫情下的艰难民生</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/6/n12236965.md#1">女子偷新生儿判1年10月 网友：鼓励犯罪</a><br><br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12239849.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/07/Unknown-320x200.jpg"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12239849.md#1">组图：高考前夕 学校孔子牛顿像前堆满供品</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12239233.md#1">美开学新政策 37万中国留学生忧心忡忡</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12237952.md#1">【视频】高考首日 安徽歙县因洪涝取消两科考试</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/6/n12235290.md#1">大陆高考7日登场 疫情以来最大规模集体活动</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/2/n12228726.md#1">耍赖拒付韩国版权费 大陆综艺节目被强制赔偿</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/3/n12229468.md#1">山东菏泽校长之子11岁起领工资 档案涉伪造</a><br><br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
+<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244206.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244206.md#1">709事件五周年 陆委会呼吁：释放维权人士</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244335.md#1">公务员职位疑遭顶包 女子柔道亚军求助无门</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243709.md#1">上海连锁酒店被断水电 黑保安封门阻营业</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243597.md#1">王全璋律师展开维权行动 向法院递交控告状</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12242955.md#1">709大抓捕五周年 各界关注港版国安法</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242651.md#1">马振宇苏州监狱遭酷刑 美议员：愿助营救</a><br><br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243581.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2017/11/VCG111133635922-320x200.jpg"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243581.md#1">忧资金进入？大陆多地升级对楼市调控</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243607.md#1">美联航和美航再次暂停飞往香港的航班</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243066.md#1">陆养猪企业招聘2.5万大学生 安排在一线猪场</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242706.md#1">北京写字楼空置率创近十年新高</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242099.md#1">惩罚中共瞒疫 川普：禁TikTok是选择之一</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242331.md#1">印度新款“检测中国App”程序上架爆红</a><br><br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244085.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/07/GettyImages-1222894281-320x200.jpg"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244085.md#1">紧随澳洲回应国安法 新西兰将重审与香港关系</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244260.md#1">五眼国家商讨香港问题 澳新重审与港关系</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243994.md#1">受贿1.07亿 海口市委前书记张琦受审</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/2/n12227709.md#1">美国加速与中俄的太空军事竞赛</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242549.md#1">不满ICE新规 纽约高校表态帮助国际学生</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242263.md#1">蓬佩奥：世卫组织未能履行其基本职能</a><br><br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12242969.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/07/Untitled-7-e1594265581119-320x200.jpg"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12242969.md#1">广汉花炮厂爆炸6人受伤 7100余人被疏散</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241562.md#1">廖远：大禹治水与三峡工程防洪失败</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241977.md#1">【重播】白宫简报会：学校必须开放 如何进行</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242486.md#1">蓬佩奥：病毒大流行让全球看清中共真面目</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12240453.md#1">【疫情中的纽约人】有争议的抗病毒配方</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242174.md#1">四川广汉鞭炮厂爆炸 上空腾出蘑菇云</a><br><br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243412.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/07/12-320x200.jpg"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243412.md#1">大学教授曝丑闻 北京律协副会长疑有多个情妇</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243214.md#1">广州多家华为手机店诱骗顾客预存电话费后“倒闭”</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241847.md#1">河北一公司老板融资被重判 15亿资产遭抢占</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12240267.md#1">每日三退声明精选（2020/07/07）</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/6/n12236618.md#1">组图：街头为家 北京疫情下的艰难民生</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/6/n12236965.md#1">女子偷新生儿判1年10月 网友：鼓励犯罪</a><br><br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12239849.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/07/Unknown-320x200.jpg"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12239849.md#1">组图：高考前夕 学校孔子牛顿像前堆满供品</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12239233.md#1">美开学新政策 37万中国留学生忧心忡忡</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12237952.md#1">【视频】高考首日 安徽歙县因洪涝取消两科考试</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/6/n12235290.md#1">大陆高考7日登场 疫情以来最大规模集体活动</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/2/n12228726.md#1">耍赖拒付韩国版权费 大陆综艺节目被强制赔偿</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/3/n12229468.md#1">山东菏泽校长之子11岁起领工资 档案涉伪造</a><br><br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/2/n12226681.md#1">监控民众不力 河北两商场遭中共内部通报</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/2/n12225939.md#1">【内幕】川习较劲 李克强率先对美释求和信号</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/6/25/n12210635.md#1">【独家】鲁炜发迹和中国“删都”的出现</a><br>
